apps/aviale/deployment.yaml
# Defines parameters for deployment and management of the app pod>container

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aviale
  labels:
    app: aviale
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aviale
  template:
    metadata:
      labels:
        app: aviale
    spec:
      containers:
      - name: aviale
        image: rahimhussain95/aviale:0a2bc82833b070a70c96852180e46a8e5de0e292
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
